# solaris_gcc_issue

./: Impl.cc  Impl.h  Interface.h  Makefile.am  MyData.cc  MyData.h  README.md  Util.h  configure.ac  minimal.cc
